[metadata]
name = SCons
version=3.9.9a992
license = MIT
author = William Deegan
author_email =bill@baddogconsulting.com
long_description = file: README.rst
description = Open Source next-generation build tool.
group = Development/Tools
license_file = LICENSE


url = http://www.scons.org/
project-urls =
    Documentation = https://scons.org/documentation.html
    Twitter = https://twitter.com/SConsProject
    GitHub = https://github.com/SCons/scons
    Bug-Tracker = https://github.com/SCons/scons/issues


classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows


[options]
zip_safe = False
python_requires = >=3.5
install_requires = setuptools
setup_requires = setuptools
include_package_data = True
package_dir=
    =src/engine
packages = find:

[options.packages.find]
    where=src/engine

[options.entry_points]
console_scripts =
    scons = SCons.Script.Main:main
    sconsign = SCons.Utilities.sconsign:main
    scons-configure-cache = SCons.Utilities.ConfigureCache:main


[options.package_data]
* = *.txt, *.rst
SCons.Tool.docbook = *.*


[bdist_wheel]
universal=0
