[metadata]
name = SCons
license = MIT
author = William Deegan
author_email =bill@baddogconsulting.com
long_description = file: README-package.rst
long_description_content_type = text/x-rst
description = Open Source next-generation build tool.
group = Development/Tools
license_file = LICENSE


url = https://www.scons.org/
project_urls =
    Documentation = https://scons.org/documentation.html
    Twitter = https://twitter.com/SConsProject
    GitHub = https://github.com/SCons/scons
    Bug-Tracker = https://github.com/SCons/scons/issues
    Discord = https://discord.gg/pejaFYrD9n
    Mailing lists = https://scons.org/lists.html


classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Build Tools
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows


[options]
zip_safe = False
python_requires = >=3.6
install_requires =
    setuptools

setup_requires = setuptools
include_package_data = True
packages = find:


[options.packages.find]
;include=SCons.*
exclude=template

[options.entry_points]
console_scripts =
    scons = SCons.Script.Main:main
    sconsign = SCons.Utilities.sconsign:main
    scons-configure-cache = SCons.Utilities.ConfigureCache:main


[options.package_data]
* = *.txt, *.rst, *.1
SCons.Tool.docbook = *.*


[options.data_files]
. = scons.1
    scons-time.1
    sconsign.1

[sdist]
    dist_dir=build/dist

[bdist_wheel]
    ; We're now py3 only
;universal=true
dist_dir=build/dist

